[tool.poetry]
name = "home-work-ds"
version = "0.1.0"
description = ""
authors = ["volodymyr <kybavolodymyr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
